--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Zero</title>
-<link rel="manifest" href="manifest.json">
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
 </head>
 <body>
-<div id="app">
-  <input type="text" id="userInput" placeholder="Enter ID">
-  <button onclick="logID()">Log ID</button>
-  <div id="log"></div>
+<div id="app" class="section">
+  <div class="container">
+    <input type="text" id="userInput" class="input is-danger" placeholder="Enter ID">
+    <button onclick="logID()" class="button is-danger">Log ID</button>
+    <div id="log"></div>
+  </div>
 </div>
 <script src="script.js"></script>
 <script>
