--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <input type="text" id="userInput" class="input is-danger" placeholder="Enter ID">
     <button onclick="logID()" class="button is-danger">Log ID</button>
-    <div id="log"></div>
+    <div style="overflow-y: scroll; height: 900px;" id="log"></div>
   </div>
 </div>
 <script src="script.js"></script>
