--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
 </head>
-<body>
+<body style="overflow-y: scroll; height: 900px;">
 <div id="app" class="section">
   <div class="container">
     <input type="text" id="userInput" class="input is-danger" placeholder="Enter ID">
     <button onclick="logID()" class="button is-danger">Log ID</button>
-    <div style="overflow-y: scroll; height: 900px;" id="log"></div>
+    <div id="log"></div>
   </div>
 </div>
 <script src="script.js"></script>
