--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Media Player with IC7 Chip Concept</title>
+<title>Advanced Media Player</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.css">
 <style>
   body { font-family: Arial, sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
   .player-container { background: #f0f0f0; padding: 20px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); border-radius: 10px; }
   ion-range { width: 100%; }
-  video, audio { width: 100%; max-width: 320px; controls: true; }
+  video { width: 100%; max-width: 320px; controls: true; }
 </style>
 </head>
 <body>
 <div class="player-container">
   <ion-item>
     <ion-label>Load Media</ion-label>
-    <ion-input id="fileInput" type="file" accept="audio/*,video/*"></ion-input>
+    <ion-input id="fileInput" type="file" accept="video/*,audio/*"></ion-input>
   </ion-item>
   <video id="mediaPlayer" controls></video>
   <ion-item>
@@ -43,13 +43,11 @@
       const file = files[0];
       mediaPlayer.src = URL.createObjectURL(file);
       mediaPlayer.type = file.type;
-      mediaPlayer.load(); // Ensure to reload the source
-      mediaPlayer.play()
-        .catch(e => {
-          document.getElementById('feedbackCenter').innerHTML = "Error playing file: " + e.message;
-        });
-      const crekS = 'Playing ' + file.name; // Updated to use 'crekS'
-      document.getElementById('feedbackCenter').innerHTML = crekS;
+      mediaPlayer.load(); // Important to load the media
+      mediaPlayer.play().catch(e => {
+        document.getElementById('feedbackCenter').innerHTML = "Error playing file: " + e.message;
+      });
+      document.getElementById('feedbackCenter').innerHTML = 'Playing ' + file.name;
     }
   }
 </script>
