--- a/index.html
+++ b/index.html
@@ -3,59 +3,62 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Native JavaScript Audio Player with Oscillator Tuning</title>
-<style>
-  /* CSS for styling */
-  body {
-    font-family: Arial, sans-serif;
-    text-align: center;
+<title>Upload and Store Audio/Video in IndexedDB</title>
+<script>
+  // JavaScript code
+  // Function to initialize IndexedDB
+  function initDB() {
+    let request = window.indexedDB.open('fileDB', 1);
+
+    request.onerror = function(event) {
+      console.log("Error opening database.");
+    };
+
+    request.onupgradeneeded = function(event) {
+      let db = event.target.result;
+      let objectStore = db.createObjectStore('files', { keyPath: 'id', autoIncrement:true });
+      console.log("Database initialized.");
+    };
   }
-  #audioPlayer {
-    width: 100%;
-    max-width: 500px;
-    margin: 20px auto;
-    display: block;
+
+  // Function to handle file upload
+  function handleFileUpload(event) {
+    let files = event.target.files;
+    let db = window.indexedDB.open('fileDB', 1);
+
+    db.onsuccess = function(event) {
+      let database = event.target.result;
+      let transaction = database.transaction(['files'], 'readwrite');
+      let objectStore = transaction.objectStore('files');
+
+      for(let i = 0; i < files.length; i++) {
+        let file = files[i];
+        let fileEntry = { file: file };
+
+        let addRequest = objectStore.add(fileEntry);
+        addRequest.onsuccess = function(event) {
+          console.log("File added to IndexedDB.");
+        };
+        addRequest.onerror = function(event) {
+          console.log("Error adding file to IndexedDB.");
+        };
+      }
+    };
+
+    db.onerror = function(event) {
+      console.log("Error opening database.");
+    };
   }
-  #frequencyInput {
-    margin-top: 20px;
-  }
-</style>
+
+  // Initialize IndexedDB when the document is ready
+  document.addEventListener('DOMContentLoaded', function() {
+    initDB();
+  });
+
+</script>
 </head>
 <body>
-<!-- HTML structure for audio element and oscillator frequency input -->
-<h1>Native JavaScript Audio Player with Oscillator Tuning</h1>
-<audio id="audioPlayer" controls loop>
-  <source src="example_audio.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
-<div>
-  <label for="frequencyInput">Oscillator Frequency (Hz):</label>
-  <input type="number" id="frequencyInput" value="440">
-  <button id="tuneButton">Tune Oscillator</button>
-</div>
-
-<!-- JavaScript for controlling oscillator and tuning -->
-<script>
-  const audioPlayer = document.getElementById('audioPlayer');
-  const context = new AudioContext();
-  const oscillator = context.createOscillator();
-  oscillator.connect(context.destination);
-
-  // Function to update oscillator frequency
-  function updateOscillatorFrequency() {
-    const frequencyInput = document.getElementById('frequencyInput');
-    const frequency = parseFloat(frequencyInput.value);
-    if (!isNaN(frequency)) {
-      oscillator.frequency.setValueAtTime(frequency, context.currentTime);
-    }
-  }
-
-  // Example: load audio file
-  audioPlayer.src = 'example_audio.mp3';
-
-  // Event listener for tuning button click
-  const tuneButton = document.getElementById('tuneButton');
-  tuneButton.addEventListener('click', updateOscillatorFrequency);
-</script>
+  <!-- HTML code -->
+  <input type="file" id="fileInput" multiple onchange="handleFileUpload(event)">
 </body>
 </html>
